--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
   "author": "Naved Uddin",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.3"
   }
